@@ -2,6 +2,7 @@
 # https://dev.mysql.com/doc/relnotes/connector-j/en/
 
 Version 8.3.0
+  - Fix for Bug#96582 (Bug#30222032), jdbc.MysqlParameterMetadata#isNullable doesnt check whether to be simple.
 
   - Fix for Bug#95796 (Bug#29907618), Parameter metadata inferred incorrectly when procedure or function doesn't exist.
 
